[package]
name = "asr-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
clap = { version = "4.5.47", features = ["derive"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "multipart", "stream", "rustls-tls", "gzip"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt"] }
urlencoding = "2.1.3"
bytes = "1"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
